--- a/src/index.css
+++ b/src/index.css
@@ -7,284 +7,519 @@
 :root {
   --app-height: 100%;
   --background: #ffffff;
-  --text-colour: #000000;
-  --special-text: #000000;
+  --special-font: #000000;
+  --normal-font: #979797;
+  --link: #0a84ff;
+  --menu-box: #f4f4f4;
+  --canvasBg: #000000;
+  --hover-box: #ededed;
 }
 
 html,
 body {
-  overflow-x: hidden;
   background-color: var(--background);
-  font-size: 18px;
-  font-family: "DM Mono", monospace;
+  font-family: "Quicksand", sans-serif;
+  overflow-x: hidden;
 }
 
-main {
-  /* padding: 30px; */
-  padding-bottom: 100px;
-}
-
-.special {
-  color: var(--special-text);
-  font-weight: 600;
+a,
+Link {
+  text-decoration: none;
+  color: var(--normal-font);
 }
 
 .header {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  padding: 30px 30px 10px 30px;
+  display: grid;
+  border-radius: 0px 0px 20px 20px;
+  row-gap: 5px;
   position: fixed;
   width: 100%;
-  padding: 20px 30px;
-  top: 0px;
-  background-color: var(--background);
-}
-
-.content {
-  padding: 50px 30px 30px 30px;
+  background: rgba(255, 255, 255, 0.1);
+  backdrop-filter: blur(7.8px);
+  -webkit-backdrop-filter: blur(7.8px);
 }
 
 .name {
-  font-size: 26px;
+  font-size: 20px;
   font-weight: 500;
 }
 
-.socials {
-  display: flex;
-  grid-column-gap: 15px;
-  position: relative;
-  margin-left: auto;
-  margin-right: 0;
+.header a {
+  color: var(--special-font);
 }
 
-.subtitle {
-  margin-top: 60px;
-}
-
-.education {
-  margin-top: 40px;
-}
-
-.skills {
-  display: flex;
-  flex-direction: column;
-  grid-row-gap: 10px;
-  margin-top: 40px;
-}
-
-.skillsIcons {
+.social {
   display: flex;
   flex-direction: row;
   align-items: center;
-  grid-column-gap: 10px;
+  font-family: "Space Mono", monospace;
+  color: var(--normal-font);
+  column-gap: 10px;
+}
+
+.social-title {
+  font-size: 18px;
+}
+
+.social-icons {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+  align-items: center;
+}
+
+.menu {
+  font-size: 18px;
+  display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
+  column-gap: 10px;
+  padding: 20px 30px 0px 30px;
+  font-weight: 500;
 }
 
-.skillsIcons img {
-  height: 35px;
+.menu-items {
+  color: var(--normal-font);
+  padding: 10px 15px;
 }
 
-.projects {
-  margin-top: 40px;
+.box {
+  color: var(--special-font);
+  border-radius: 10px;
+  background-color: var(--menu-box);
+}
+
+main {
+  padding-top: 120px;
+}
+
+.about {
+  font-size: 18px;
+  /* padding: 0px 30px; */
+  font-family: "Space Mono", monospace;
   display: flex;
   flex-direction: column;
-  grid-row-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  row-gap: 40px;
 }
 
-.projectlist {
+.special {
+  color: var(--normal-font);
+}
+
+.about-one {
+  padding-top: 50px;
+  width: 290px;
+}
+
+.about-two {
+  width: 290px;
+}
+
+.about-three {
+  width: 290px;
   display: flex;
   flex-direction: column;
-  margin-left: 10px;
-  grid-row-gap: 5px;
+  row-gap: 10px;
 }
 
-.subproject {
-  margin-left: 20px;
+.about-four {
+  width: 290px;
 }
 
-a {
-  text-decoration: none;
-  color: var(--text-colour);
+.about-five {
+  /* text-align: center; */
+  width: 290px;
+  padding-bottom: 100px;
 }
 
-.arrow {
-  height: 12px;
-  color: #ff0000;
+.tech-icons {
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+  justify-content: center;
+  align-items: center;
 }
 
-.project a {
-  /* border-bottom: 2px dotted #000000; */
+.project {
+  font-family: "Space Mono", monospace;
+  font-size: 18px;
+  padding: 0px 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.projectNav {
+  font-family: "Quicksand", sans-serif;
+  display: flex;
+  flex-direction: row;
+  column-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  color: var(--normal-font);
+  padding: 30px 0px;
+  font-weight: 500;
+}
+
+.nav {
+  padding: 10px 20px;
+}
+
+.project-content {
+  display: flex;
+  flex-direction: column;
+  row-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  width: 300px;
+  padding-bottom: 100px;
+  text-align: center;
+  grid-gap: 10px;
+  font-size: 16px;
+  padding-top: 20px;
+}
+
+.table-row {
+  display: flex;
+  flex-direction: row;
+  grid-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+.table-row .title {
+  padding: 10px 10px;
+  text-align: center;
+}
+
+.table-column {
+  color: var(--link);
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+  width: 110px;
   cursor: pointer;
 }
 
-.subproject a {
-  /* border-bottom: 2px dotted #000000; */
-  cursor: pointer;
+.table-column a {
+  color: var(--link);
+}
+
+.table-columns {
+  width: 190px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: left;
+}
+
+.pictures {
+  padding: 50px 30px 100px 30px;
+  display: grid;
+  grid-template-columns: auto auto;
+  row-gap: 10px;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+}
+
+.pictures img {
+  width: 150px;
+  border-radius: 8px;
+}
+
+.code-pic {
+  position: absolute;
+  display: flex;
+  left: 50%;
+  transform: translate(-50%);
+  padding: 0px;
+  top: 45%;
+}
+
+.code-pic img {
+  width: 280px;
+  border-radius: 20px;
+}
+
+.buttonCode {
+  position: absolute;
+  padding: 10px;
+  font-weight: 800;
+}
+
+.code {
+  color: var(--link);
 }
 
 .three {
   position: absolute;
   left: 50%;
-  transform: translate(-50%, -170%);
+  transform: translate(-50%);
+  top: 40%;
+  z-index: 1000;
 }
 
 .three {
-  background-color: #000000;
-  border-radius: 15px;
+  background-color: var(--canvasBg);
+  border-radius: 30px;
   width: 300px;
   height: 300px;
   overflow: hidden;
 }
 
 .buttonThree {
-  position: fixed;
-  z-index: 100;
-  top: 0px;
-  left: -1px;
-  color: #e9e9e9;
-  background-color: #ff0000;
-  border-radius: 15px 0 0 0px;
-  padding: 5px 15px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 18px;
-  cursor: pointer;
+  font-weight: 800;
+  color: #ff0000;
+  position: absolute;
+  padding: 15px 20px;
+  font-size: 20px;
+  z-index: 1001;
 }
 
 /* Media Queries */
 @media only screen and (min-width: 750px) {
-  main {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
-    font-size: 18px;
-    width: 700px;
-    padding-bottom: 50px;
-  }
-
-  .content {
-    margin-top: 70px;
-    display: grid;
-    grid-template-columns: auto auto;
-    grid-column-gap: 50px;
-    justify-content: center;
-  }
-
-  .lap-one {
-    width: 300px;
-  }
-
-  .lap-two {
-    width: 300px;
-  }
-
   .header {
-    position: relative;
-    padding: 50px 30px 10px 30px;
+    padding: 30px 0px;
+    justify-content: center;
+    align-items: center;
   }
 
   .name {
-    font-size: 36px;
+    font-size: 24px;
   }
 
-  .socials {
-    grid-column-gap: 20px;
+  .social {
+    column-gap: 20px;
   }
 
-  .subtitle {
-    margin-top: 0px;
+  .social-title {
+    font-size: 20px;
   }
 
-  .education {
-    margin-top: 40px;
+  .social-icons {
+    column-gap: 20px;
   }
 
-  .skillsIcons {
+  .menu {
+    font-size: 18px;
+    column-gap: 30px;
+    padding: 30px 30px 0px 30px;
+  }
+
+  .menu-items {
+    padding: 15px 20px;
+  }
+
+  .box {
+    border-radius: 12px;
+  }
+
+  main {
+    padding-top: 120px;
+  }
+
+  .about {
+    padding-top: 40px;
+    font-size: 18px;
+    row-gap: 40px;
     display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-column-gap: 15px;
-    margin-left: 0px;
-    position: absolute;
-    left: 30px;
-    margin-top: 40px;
+    grid-template-columns: auto auto;
+    column-gap: 30px;
+    justify-content: center;
+    align-items: center;
   }
 
-  .skillsIcons img {
-    height: 35px;
+  .about-one {
+    padding-top: 50px;
+    width: 300px;
   }
 
-  .projects {
-    margin-top: 0px;
-    grid-row-gap: 10px;
+  .about-two {
+    width: 300px;
   }
 
-  .projectlist {
-    margin-left: 20px;
-    grid-row-gap: 10px;
-  }
-
-  .subprojects {
+  .about-three {
+    width: 300px;
     display: flex;
     flex-direction: column;
-    grid-row-gap: 10px;
+    row-gap: 10px;
   }
 
-  .three {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, 30%);
+  .about-four {
+    width: 300px;
   }
 
-  .three {
-    background-color: #000000;
-    border-radius: 25px;
+  .about-five {
+    width: 300px;
+    padding-bottom: 100px;
+  }
+
+  .tech-icons {
+    column-gap: 12px;
+    justify-content: left;
+  }
+
+  .project {
+    font-size: 18px;
+    padding: 0px 30px;
+  }
+
+  .projectNav {
+    column-gap: 15px;
+    justify-content: center;
+    align-items: center;
+    color: var(--normal-font);
+    padding: 30px 0px;
+    font-weight: 500;
+  }
+
+  .nav {
+    padding: 15px 25px;
+  }
+
+  .project-content {
     width: 500px;
-    height: 500px;
-    overflow: hidden;
+    padding-bottom: 100px;
+    grid-gap: 15px;
+    font-size: 18px;
+    padding-top: 10px;
+  }
+
+  .table-row {
+    grid-gap: 40px;
+  }
+
+  .table-row .title {
+    padding: 15px 15px;
+    text-align: center;
+  }
+
+  .table-column {
+    width: 160px;
+    cursor: pointer;
+  }
+
+  .table-columns {
+    width: 200px;
+  }
+
+  .pictures {
+    padding: 50px 30px 100px 30px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    row-gap: 15px;
+    justify-content: center;
+    align-items: center;
+    column-gap: 10px;
+  }
+
+  .pictures img {
+    width: 200px;
+    border-radius: 12px;
+  }
+
+  .code-pic {
+    top: 30%;
+  }
+
+  .code-pic img {
+    width: 450px;
+    border-radius: 20px;
+  }
+
+  .buttonCode {
+    padding: 10px;
+    font-weight: 800;
+  }
+
+  .code {
+    color: var(--link);
+    cursor: pointer;
+  }
+
+  .three {
+    transform: translate(-50%);
+    top: 30%;
+    z-index: 1003;
+  }
+
+  .three {
+    width: 400px;
+    height: 400px;
   }
 
   .buttonThree {
-    position: fixed;
-    z-index: 100;
-    top: 0px;
-    left: -1px;
-    color: #ffffff;
-    background-color: #ff0000;
-    border-radius: 15px 0 0 0px;
-    padding: 10px 25px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 18px;
-    cursor: pointer;
+    font-weight: 800;
+    color: #ff0000;
+    position: absolute;
+    padding: 15px 20px;
+    font-size: 20px;
+    z-index: 1001;
   }
 }
 
 @media (hover: hover) and (pointer: fine) {
-  .name a:hover {
-    color: #777777;
+  .pictures img:hover {
+    transform: scale(1.05);
+    cursor: no-drop;
   }
 
-  .socials img:hover {
-    transform: scale(1.2);
+  .title:hover {
+    background-color: var(--hover-box);
+    cursor: alias;
   }
 
-  .skillsIcons img:hover {
+  .tech-icons img:hover {
     transform: scale(1.2);
     cursor: no-drop;
   }
 
-  .projects a:hover {
-    /* color: #777777; */
-    font-weight: 500;
-    .arrow {
-      transform: scale(1.2);
-    }
+  .code:hover {
+    cursor: alias;
+    color: var(--normal-font);
+  }
+
+  .buttonCode:hover {
+    color: #ff0000;
+    cursor: pointer;
+  }
+
+  .table-columns:hover {
+    cursor: no-drop;
+  }
+
+  .menu-items:hover {
+    background-color: var(--menu-box);
+    border-radius: 10px;
+  }
+
+  .nav:hover {
+    background-color: var(--menu-box);
+    border-radius: 10px;
+  }
+
+  .name:hover {
+    color: var(--link);
+  }
+
+  .social-title:hover {
+    cursor: no-drop;
+  }
+
+  .social-icons img:hover {
+    transform: scale(1.2);
+    cursor: pointer;
   }
 
   .buttonThree:hover {
-    color: #000000;
+    cursor: pointer;
+    transform: scale(1.2);
   }
 }
