--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,23 @@
   --menu-box: #f4f4f4;
   --canvasBg: #000000;
   --hover-box: #ededed;
+  --menu-bg: rgba(255, 255, 255, 0.1);
+  --three-bg: rgba(255, 255, 255, 0.1);
+  --font-color: #000000;
+}
+
+[data-theme="dark"] {
+  --app-height: 100%;
+  --background: #111111;
+  --special-font: #ffffff;
+  --normal-font: #838383;
+  --link: #0a84ff;
+  --menu-box: #202020;
+  --canvasBg: #000000;
+  --hover-box: #202020;
+  --menu-bg: rgba(14, 14, 14, 0.1);
+  --three-bg: rgba(14, 14, 14, 0.1);
+  --font-color: #e4e4e4;
 }
 
 html,
@@ -20,6 +37,7 @@ body {
   background-color: var(--background);
   font-family: "Quicksand", sans-serif;
   overflow-x: hidden;
+  height: 100%;
 }
 
 a,
@@ -35,7 +53,7 @@ Link {
   row-gap: 5px;
   position: fixed;
   width: 100%;
-  background: rgba(255, 255, 255, 0.1);
+  background: var(--menu-bg);
   backdrop-filter: blur(7.8px);
   -webkit-backdrop-filter: blur(7.8px);
 }
@@ -67,6 +85,21 @@ Link {
   flex-direction: row;
   column-gap: 10px;
   align-items: center;
+}
+
+#dark {
+  display: none;
+}
+
+.toggleButton {
+  position: absolute;
+  right: 30px;
+  top: 40px;
+}
+
+.toggle Button {
+  background: none;
+  border: none;
 }
 
 .menu {
@@ -103,6 +136,7 @@ main {
   justify-content: center;
   align-items: center;
   row-gap: 40px;
+  color: var(--font-color);
 }
 
 .special {
@@ -150,6 +184,7 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  color: var(--normal-font);
 }
 
 .projectNav {
@@ -237,7 +272,7 @@ main {
   top: 0;
   width: 100%;
   height: 100%;
-  background: rgba(255, 255, 255, 0.5);
+  background: var(--three-bg);
   backdrop-filter: blur(5px);
   z-index: 1005;
 }
@@ -273,12 +308,12 @@ main {
   transform: translate(-50%);
   top: 0;
   z-index: 1000;
-  background: rgba(255, 255, 255, 0.5);
+  background: var(--three-bg);
   backdrop-filter: blur(5px);
 }
 
 .three {
-  background: rgba(255, 255, 255, 0.5);
+  background: var(--three-bg);
   backdrop-filter: blur(5px);
   width: 100%;
   height: 100%;
@@ -318,6 +353,12 @@ main {
 
   .social-icons {
     column-gap: 20px;
+  }
+
+  .toggleButton {
+    position: absolute;
+    right: 50px;
+    top: 40px;
   }
 
   .menu {
@@ -522,7 +563,7 @@ main {
   }
 
   .social-icons img:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     cursor: pointer;
   }
 
@@ -533,5 +574,10 @@ main {
 
   .code-pic img:hover {
     cursor: no-drop;
+  }
+
+  .toggleButton:hover {
+    cursor: pointer;
+    transform: scale(1.1);
   }
 }
