--- a/src/pages/BlogPost.css
+++ b/src/pages/BlogPost.css
@@ -48,6 +48,12 @@ blockquote {
 }
 
 .blogPost {
-  margin-bottom: 100px;
+  margin-bottom: 10px;
   padding: 0px 5px;
+}
+
+.blog-footer {
+  margin: 0;
+  padding: 0;
+  padding-top: 50px;
 }
