--- a/src/pages/BlogPost.css
+++ b/src/pages/BlogPost.css
@@ -22,13 +22,15 @@ p {
 }
 
 code {
-  background-color: #f5f5f5;
-  padding: 2px 4px;
+  background-color: #efefef;
+  padding: 1px 4px;
   border-radius: 4px;
+  color: #555;
+  font-family: "Space mono";
+  font-size: 13px;
 }
 
 pre {
-  /* background-color: #f5f5f5; */
   padding: 0px;
   border-radius: 4px;
   overflow-x: auto;
