--- a/src/pages/BlogPost.css
+++ b/src/pages/BlogPost.css
@@ -14,6 +14,12 @@ h6 {
   color: #000000;
   margin-top: 0px;
   font-family: "Sentient", sans-serif;
+  margin-bottom: 20px;
+}
+
+.blog-title h2,
+.blog-date p {
+  margin-bottom: 0px;
 }
 
 p {
