--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,24 @@ body {
 }
 
 .main {
-  padding: 50px 30px 40px;
+  padding: 50px 30px;
+}
+
+.top-bar {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  width: 94vw;
+  height: 35px;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    180deg,
+    rgba(255, 255, 255, 1) 10%,
+    rgba(255, 255, 255, 0.9) 40%,
+    rgba(254, 254, 254, 0) 100%
+  );
+  z-index: 100000;
 }
 
 /* Typography */
@@ -61,6 +78,11 @@ a {
 }
 
 /* BlogPost List */
+
+.writing-section {
+  padding-bottom: 70px;
+}
+
 .blog {
   display: flex;
   flex-direction: column;
@@ -186,7 +208,7 @@ a {
 .about-content {
   padding-bottom: 50px;
   font-size: var(--normal-font-size);
-  font-weight: 350;
+  font-weight: 400;
   line-height: 24px;
   display: flex;
   flex-direction: column;
@@ -194,7 +216,7 @@ a {
 }
 
 .about-special {
-  font-weight: 550;
+  font-weight: 650;
 }
 
 .about-content a {
@@ -273,7 +295,8 @@ a {
   position: fixed;
   inset: 0;
   z-index: 10000;
-  background-color: var(--canvas-background);
+  /* background-color: var(--canvas-background); */
+  background-color: var(--background);
   backdrop-filter: blur(4px);
   -webkit-backdrop-filter: blur(4px);
 }
@@ -304,12 +327,21 @@ a {
     --about-title: 24px;
   }
 
+  .top-bar {
+    height: 60px;
+  }
+
   .main {
     position: relative;
     left: 50%;
     transform: translateX(-50%);
     width: 650px;
     padding-top: 70px;
+  }
+
+  .blog-title {
+    width: 420px;
+    padding-bottom: 0px;
   }
 
   .about-content {
@@ -395,7 +427,7 @@ a {
 }
 
 .scroll-to-top div {
-  background-color: #cccccc;
+  background-color: #bbbbbbeb;
   border-radius: 50%;
   width: 40px;
   height: 40px;
